[tool.poetry]
name = "Buienalarm"
version = "2025.6.17"
description = "Buienalarm Nederland."
authors = ["HiDiHo <hidiho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "custom_components/buienalarm" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
homeassistant = "^2025.6.2"
pytest-asyncio = "*"

[tool.poetry.group.dev.dependencies]
pytest-homeassistant-custom-component = "^0.13.0"
pytest = "^8.3.5"
black = "^25.1.0"
pylint = "^3.0.0"
pytest = "^8.4"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
