[tool.poetry]
name = "Buienalarm"
version = "2025.10.18"
description = "Buienalarm"
authors = ["HiDiHo <hidiho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "custom_components/buienalarm" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short --color=yes"

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"
homeassistant = "^2025.6.2"

[tool.poetry.group.dev.dependencies]
pytest-homeassistant-custom-component = "^0.13.0"
black = "^25.1.0"
pylint = "^4.0.0"
pytest = "^8.3.5"
pytest-asyncio = ">=0.23.6,<1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
