[tool.poetry]
name = "Buienalarm"
version = "2026.5.5"
description = "Buienalarm"
authors = ["HiDiHo <hidiho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "custom_components/buienalarm" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short --color=yes"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"  # Align with pytest-homeassistant-custom-component requirements
homeassistant = ">=2026.01"

[tool.poetry.group.dev.dependencies]
pytest-homeassistant-custom-component = "^0.13.326"
black = "^26.1.0"
pylint = "^4.0.0"
pytest = "^9.0.0"
pytest-asyncio = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
